Ensure LayerImpls that draw content are hit testable

[1] introduced a bit on LayerImpl for hit testing layers that
do not draw content. There was a bug in how this bit was
pushed where a Layer that draws content would end up not being
hit testable.

This patch factors should_hit_test into should_hit_test_non_drawable
and makes should_hit_test depend explicitly on drawing content
or should_hit_test_non_drawable.

[1] https://chromium-review.googlesource.com/c/chromium/src/+/529426

Bug: 764271
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Id5d9f2cf9cd6a5a6e33808b3729bf3c16f481037