cc/layers/layer_impl.cc
@@ -63,7 +63,7 @@ LayerImpl::LayerImpl(LayerTreeImpl* tree_impl, int id)
       should_check_backface_visibility_(false),
       draws_content_(false),
       contributes_to_drawn_render_surface_(false),
-      should_hit_test_(false),
+      should_hit_test_non_drawable_(false),
       is_resized_by_browser_controls_(false),
       viewport_layer_type_(NOT_VIEWPORT_LAYER),
       background_color_(0),
@@ -318,7 +318,7 @@ void LayerImpl::PushPropertiesTo(LayerImpl* layer) {
   layer->use_parent_backface_visibility_ = use_parent_backface_visibility_;
   layer->should_check_backface_visibility_ = should_check_backface_visibility_;
   layer->draws_content_ = draws_content_;
-  layer->should_hit_test_ = should_hit_test_;
+  layer->should_hit_test_non_drawable_ = should_hit_test_non_drawable_;
   layer->non_fast_scrollable_region_ = non_fast_scrollable_region_;
   layer->touch_action_region_ = touch_action_region_;
   layer->background_color_ = background_color_;
@@ -403,6 +403,7 @@ std::unique_ptr<base::DictionaryValue> LayerImpl::LayerTreeAsJson() {
   result->Set("Transform", std::move(list));
 
   result->SetBoolean("DrawsContent", draws_content_);
+  result->SetBoolean("ShouldHitTestNonDrawable", should_hit_test_non_drawable_);
   result->SetBoolean("Is3dSorted", Is3dSorted());
   result->SetDouble("OPACITY", Opacity());
   result->SetBoolean("ContentsOpaque", contents_opaque_);
@@ -582,16 +583,14 @@ void LayerImpl::SetDrawsContent(bool draws_content) {
     return;
 
   draws_content_ = draws_content;
-  if (draws_content)
-    SetShouldHitTest(true);
   NoteLayerPropertyChanged();
 }
 
-void LayerImpl::SetShouldHitTest(bool should_hit_test) {
-  if (should_hit_test_ == should_hit_test)
+void LayerImpl::SetShouldHitTestNonDrawable(bool should_hit_test) {
+  if (should_hit_test_non_drawable_ == should_hit_test)
     return;
 
-  should_hit_test_ = should_hit_test;
+  should_hit_test_non_drawable_ = should_hit_test;
   NoteLayerPropertyChanged();
 }
 
