third_party/WebKit/Source/core/paint/compositing/CompositedLayerMapping.cpp
@@ -254,7 +254,7 @@ void CompositedLayerMapping::CreatePrimaryGraphicsLayer() {
       CreateGraphicsLayer(owning_layer_.GetCompositingReasons(),
                           owning_layer_.GetSquashingDisallowedReasons());
 
-  UpdateShouldHitTest(true);
+  UpdateShouldHitTestNonDrawable(true);
   UpdateOpacity(GetLayoutObject().StyleRef());
   UpdateTransform(GetLayoutObject().StyleRef());
   UpdateFilters(GetLayoutObject().StyleRef());
@@ -281,8 +281,9 @@ void CompositedLayerMapping::DestroyGraphicsLayers() {
   scrolling_contents_layer_ = nullptr;
 }
 
-void CompositedLayerMapping::UpdateShouldHitTest(const bool& should_hit_test) {
-  graphics_layer_->SetShouldHitTest(should_hit_test);
+void CompositedLayerMapping::UpdateShouldHitTestNonDrawable(
+    const bool& should_hit_test) {
+  graphics_layer_->SetShouldHitTestNonDrawable(should_hit_test);
 }
 
 void CompositedLayerMapping::UpdateOpacity(const ComputedStyle& style) {
@@ -1666,7 +1667,7 @@ void CompositedLayerMapping::UpdateForegroundLayerGeometry(
     foreground_layer_->SetNeedsDisplay();
   }
   foreground_layer_->SetOffsetFromLayoutObject(foreground_offset);
-  foreground_layer_->SetShouldHitTest(true);
+  foreground_layer_->SetShouldHitTestNonDrawable(true);
 
   // NOTE: there is some more configuring going on in
   // updateScrollingLayerGeometry().
@@ -2435,7 +2436,7 @@ bool CompositedLayerMapping::UpdateScrollingLayers(
       // Inner layer which renders the content that scrolls.
       scrolling_contents_layer_ =
           CreateGraphicsLayer(kCompositingReasonLayerForScrollingContents);
-      scrolling_contents_layer_->SetShouldHitTest(true);
+      scrolling_contents_layer_->SetShouldHitTestNonDrawable(true);
 
       auto element_id = scrollable_area->GetCompositorElementId();
       scrolling_contents_layer_->SetElementId(element_id);
