third_party/WebKit/Source/platform/graphics/GraphicsLayer.h
@@ -183,8 +183,10 @@ class PLATFORM_EXPORT GraphicsLayer : public cc::LayerClient,
   void SetBlendMode(WebBlendMode);
   void SetIsRootForIsolatedGroup(bool);
 
-  void SetShouldHitTest(bool);
-  bool GetShouldHitTestForTesting() { return should_hit_test_; }
+  void SetShouldHitTestNonDrawable(bool);
+  bool GetShouldHitTestNonDrawableForTesting() {
+    return should_hit_test_non_drawable_;
+  }
 
   void SetFilters(CompositorFilterOperations);
   void SetBackdropFilters(CompositorFilterOperations);
@@ -362,7 +364,7 @@ class PLATFORM_EXPORT GraphicsLayer : public cc::LayerClient,
   bool draws_content_ : 1;
   bool contents_visible_ : 1;
   bool is_root_for_isolated_group_ : 1;
-  bool should_hit_test_ : 1;
+  bool should_hit_test_non_drawable_ : 1;
 
   bool has_scroll_parent_ : 1;
   bool has_clip_parent_ : 1;
